# BioEvo

./: .gitignore  BOW  CMakeLists.txt  Documentation.txt  Readme
config/: test1.conf.json  test2.conf.json
data/: genes_base.csv  genes_base_algo_2.csv  genes_base_self_transcription.csv  genes_with_DNA.csv  genes_with_bootstrap_DNA.csv  genes_with_bootstrap_DNA_full.csv  genes_with_ribosome_and_built_heaviside.csv  genes_with_tRNAs.csv  individual_new_gene_after.csv  individual_new_gene_before.csv  molecular_body_base.csv  molecular_body_base_self_transcription.csv  molecular_body_transcribed.csv  molecular_body_transcribed_iterated.csv  molecular_body_with_DNA.csv  molecular_body_with_bootstrap_DNA.csv  molecular_body_with_bootstrap_DNA_full.csv  molecular_body_with_ribosome_and_built_heaviside.csv  molecular_body_with_tRNAs.csv  phenotypic_body_base_self_transcription.csv  phenotypic_body_transcribed.csv  phenotypic_body_transcribed_iterated.csv  phenotypic_body_with_DNA.csv  phenotypic_body_with_bootstrap_DNA.csv  phenotypic_body_with_bootstrap_DNA_full.csv  phenotypic_body_with_ribosome_and_built_heaviside.csv  temp2.txt
docs/: .~lock.genetic_data_stack.odg#  genetic_data_stack.odg  genetic_pointers.odg
documentation/Cybernetics/: main.blg  main.tex  preamble.tex  references.bib
documentation/Cybernetics/Part1/: part1.tex
documentation/EvoX/: progteins_and_processors_all.rmd
documentation/EvoX/Processors/: processors.rmd
documentation/EvoX/Progteins/: Progteins.rmd  Progteins_genesis.rmd  progteins.rmd
results/: general_results.txt
src/: Buffer.cpp  Buffer.hpp  Constants.cpp  Constants.hpp  Entity.cpp  Entity.hpp  Environment.cpp  Environment.hpp  Experiment.cpp  Experiment.hpp  ExperimentOld.cpp  ExperimentOld.hpp  Experimenter.cpp  Experimenter.hpp  Flow.cpp  Flow.hpp  Framework.cpp  Framework.hpp  Individual.cpp  Individual.hpp  PreprocessingDefinitions.hpp  Solution.cpp  Solution.hpp  Universe.cpp  Universe.hpp  main.cpp
src/Biology/: AbstractTrait.hpp  Gene.cpp  Gene.hpp  Trait.hpp
src/Biology/Gene/: Gene.cpp  Gene.hpp  GeneLinear.cpp  GeneLinear.hpp
src/Biology/QuantumData/: QuantumData.hpp  QuantumDataAbstract.hpp  TestData.cpp  TestData.hpp  ValidationData.cpp  ValidationData.hpp
src/ClassicalAlgos/: ClassicalUniverse.cpp  ClassicalUniverse.hpp
src/ClassicalAlgos/LinearRegression/: BufferLinear.cpp  BufferLinear.hpp  EnvironmentLinear.cpp  EnvironmentLinear.hpp  FlowLinear.cpp  FlowLinear.hpp  GeneLinear.cpp  GeneLinear.hpp
src/CodeEater/: Constants.hpp  ConstantsCodeEater.hpp  PreprocessingDefinitions.hpp  README  Universe.cpp  Universe.hpp  UniverseCodeEater.cpp  UniverseCodeEater.hpp  main.cpp
src/CodeEater/CodeEaters/: CodeEater.cpp  CodeEater.hpp
src/CodeEater/Computing/: EatingProcessor.cpp  EatingProcessor.hpp  FunctionPatternComputer.cpp  FunctionPatternComputer.hpp  FunctionProcessor.cpp  FunctionProcessor.hpp  NeighborhoodManager.cpp  NeighborhoodManager.hpp  RuleApplier.cpp  RuleApplier.hpp  RuleNumberComputer.cpp  RuleNumberComputer.hpp  StateChanger.cpp  StateChanger.hpp
src/CodeEater/Experiments/: Experiment.cpp  Experiment.hpp  Experiment1.cpp  Experiment1.hpp  Experiment2.cpp  Experiment2.hpp  Experiment3.cpp  Experiment3.hpp  ExperimentCodeEater.cpp  ExperimentCodeEater.hpp  ExperimentCodeEater1.cpp  ExperimentCodeEater1.hpp  ExperimentCodeEater2.cpp  ExperimentCodeEater2.hpp  ExperimentCodeEater3.cpp  ExperimentCodeEater3.hpp  ExperimentOldCodeEater.cpp  ExperimentOldCodeEater.hpp  ExperimentOldCodeEater1.cpp  ExperimentOldCodeEater1.hpp  ExperimentOldCodeEater2.cpp  ExperimentOldCodeEater2.hpp  ExperimentOldCodeEater3.cpp  ExperimentOldCodeEater3.hpp
src/Declaration/: Constants.cpp  Constants.hpp  PreprocessingDefinitions.hpp
src/Entities/: Entity.cpp  Entity.hpp  EntityBool.cpp  EntityBool.hpp  EntityInt.cpp  EntityInt.hpp  EntityList.cpp  EntityList.hpp  EntityVoid.cpp  EntityVoid.hpp  VoidEntity.cpp  VoidEntity.hpp
src/Environment/: Environment.cpp  Environment.hpp  EnvironmentClassical.cpp  EnvironmentClassical.hpp  EnvironmentLinear.cpp  EnvironmentLinear.hpp
src/Experiment/: Experiment.cpp  Experiment.hpp  ExperimentRunner.cpp  ExperimentRunner.hpp
src/Experiment/BioEvo/: ExperimentRunnerBioEvo.hpp  main.cpp
src/Experiment/ClassicalInfo/: ExperimentRunnerClassicalInfo.hpp  main.cpp
src/Experiment/Maths/: ExperimentRunnerMaths.hpp  main.cpp
src/Experiments/: experiment_1.cpp  experiment_1.hpp
src/Experiments/ClassicalAlgos/: experiment_classical_algo_1.cpp  experiment_classical_algo_1.hpp
src/Experiments/Experiment_1_00/: EnvironmentLinear.cpp  EnvironmentLinear.hpp  GeneLinear.hpp  experiment_1_00.cpp  experiment_1_00.hpp
src/Flow/: Flow.hpp  FlowList.hpp  InputLinearEnvironment.cpp  InputLinearEnvironment.hpp  InputLinearIndividual.cpp  InputLinearIndividual.hpp  OutputLinearEnvironment.cpp  OutputLinearEnvironment.hpp  OutputLinearIndividual.hpp
src/Flow/Buffer/: Buffer.cpp  Buffer.hpp  BufferLinear.cpp  BufferLinear.hpp
src/General/: Entity.cpp  Entity.hpp  Place.cpp  Place.hpp  VoidEntity.cpp  VoidEntity.hpp
src/Individual/: Individual.cpp  Individual.hpp  IndividualLinear.cpp  IndividualLinear.hpp
src/Server/: Server.cpp  Server.hpp
src/UnitTest/: main.cpp
src/UnitTests/: main.cpp
src/UnitTests/BioEvo/: bio_evo.hpp  main.cpp  test_1_empty.hpp
src/UnitTests/ClassicalAlgos/: classical_algos.hpp  main.cpp  test_1_empty.hpp  test_2_1.hpp  test_2_genes.hpp  test_2_molecular_body.hpp  test_2_phenotypic_body.hpp
src/UnitTests/ClassicalInfo/: classical_info.hpp  main.cpp  test_1_empty.hpp
src/UnitTests/CodeEaters/: code_eaters.hpp  main.cpp  test_1_1.hpp  test_1_2.hpp  test_1_empty.hpp  test_2_1.hpp  test_2_1_1.hpp  test_2_1_1_1.hpp  test_2_1_1_2.hpp  test_2_1_1_3.hpp  test_2_1_1_4.hpp  test_2_2.hpp  test_2_2_1.hpp  test_2_2_1_1.hpp  test_2_2_1_2.hpp  test_2_2_1_3.hpp  test_2_3.hpp  test_2_3_1.hpp  test_2_operations.hpp  test_3_1.hpp  (+1 more)
src/Universe/: Universe.cpp  Universe.hpp
src/Utils/: Builder.hpp  Colors.hpp  Constants.hpp  Functions.hpp  Logger.hpp
(+476 files in other folders)
